--- a/Taskly/Info.plist
+++ b/Taskly/Info.plist
@@ -22,7 +22,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>CSE494.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.bam.Taskly</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
